# cmake-presets

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  call_clang_format.py
